@@ -27,7 +27,7 @@
 #define MAXLINE 1024
 
 /* list of files to search for [BDyess] */
-static char *filelist[] = {".tedrc",".paradiserc",".netrekrc",".xtrekrc",NULL};
+static char *filelist[] = {".paradiserc",".netrekrc",".xtrekrc",NULL};
 
 /* Prototypes */
 static FILE *findDefaults P((char *home, char **deffile, char *base));
